[package]
name = "iron-gcd"
version = "0.1.0"
edition = "2022"
authors = ["Алексей Казачина  <alexei.kazachina@yandex.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.1"
mime = "0.3.16"
router = "0.6.0"
urlencoded = "0.6.0"